--- a/src/buttons/buttons.scss
+++ b/src/buttons/buttons.scss
@@ -3,6 +3,68 @@
    --------------------------------------------------
 */
 
-.kBt {
-	
+.button {
+	display: inline-block;
+	vertical-align: top;
+	padding: .4em 1em;
+	background: #EEE;
+	border: none;
+	border-top: 0px solid transparent;
+	border-bottom: 2px solid #DDD;
+
+	text-decoration: none;
+	color: #333;
+
+	outline: none;
+
+	&:active {
+		border-top: 2px solid transparent;
+		border-bottom: 0px;
+	}
+
+	&.button--disabled {
+		background: #EFEFEF;
+		color: #ccc;
+		border: none;
+		cursor: not-allowed; 
+	}
+
+	&.button--active {
+		background: #BBB;
+		border: none;
+	}
+
+	&.button--success {
+		background: #1aa71b;
+		color: white;
+		border-bottom-color: #168f17;
+	}
+
+	&.button--error {
+		background: #c10f03;
+		color: white;
+		border-bottom-color: #970a02;
+	}
+
+	&.button--warning {
+		background: #ebc41b;
+		color: #333;
+		border-bottom-color: #c7a415;
+	}
+
+	&.button--extra-small {
+		font-size: 60%;
+	}
+
+	&.button--small {
+		font-size: 80%;
+	}
+
+	&.button--large {
+		font-size: 120%;
+	}
+
+	&.button--extra-large {
+		font-size: 140%;
+	}
 }
