--- a/src/tables/tables.scss
+++ b/src/tables/tables.scss
@@ -1,6 +1,41 @@
-.table
-	thead
-		tr
-			td
-				padding: .4em .6em;
+.table {
+	border: 1px solid #CCC;
+	border-collapse: collapse;
+	border-spacing: 0;
+	empty-cells: show;
+	td, th {
+		border-left: 1px solid #CCC;
+		overflow: visible;
+		padding: .4em .6em;
+	}
+	td:first-child, th:first-child {
+		border-left-width: 0;
+	}
+	thead {
+		vertical-align: top;
+		background: #EEE;
+		text-align: left;
+	}
+
+	&.table-bordered {
+		tr {
+			border-bottom: 1px solid #CCC;
+		}
+	}
+
+	&.table-horizontal {
+		td, th {
+			border-left-width: 0;
+			border-bottom: 1px solid #CCC;
+		}
+	}
+
+	&.table-striped {
+		tbody {
+			tr:nth-child(odd) {
+				background: #F7F7F7;
+			}
+		}
+	}
+}
 				
