--- a/src/grid/grid.scss
+++ b/src/grid/grid.scss
@@ -4,6 +4,7 @@
 */
 
 .grid {
+	*display: block;
 	display: -webkit-flex;
 	-webkit-flex-flow: row wrap;
 	display: -ms-flexbox;
@@ -14,10 +15,15 @@
 		*display: inline;
 		vertical-align: top;
 		box-sizing: border-box;
+		padding-left: 0.625em;
 		letter-spacing: normal;
 		word-spacing: normal;
 		text-rendering: auto;
 		zoom: 1;
+
+		&:last-child {
+			padding-right: 0.625em;
+		}
 	}
 
 	.grid-unit-1 {
