--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -3,6 +3,7 @@
    --------------------------------------------------
 */
 .grid {
+  *display: block;
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
   display: -ms-flexbox;
@@ -13,10 +14,14 @@
   *display: inline;
   vertical-align: top;
   box-sizing: border-box;
+  padding-left: 0.625em;
   letter-spacing: normal;
   word-spacing: normal;
   text-rendering: auto;
   zoom: 1;
+}
+.grid [class*="grid-unit"]:last-child {
+  padding-right: 0.625em;
 }
 .grid .grid-unit-1 {
   width: 100%;
