--- a/src/forms/forms.scss
+++ b/src/forms/forms.scss
@@ -1,4 +1,10 @@
 @import "../config/colors.scss";
+@import "../config/font.scss";
+
+/*--------------------------------------------------
+   |					        F O R M S  						     |
+   --------------------------------------------------
+*/
 
 .form {
 	fieldset {
