--- a/src/grid/grid.scss
+++ b/src/grid/grid.scss
@@ -1,3 +1,6 @@
+@import "../config/colors.scss";
+@import "../config/font.scss";
+
 /*--------------------------------------------------
    |					      	G R I D 							     |
    --------------------------------------------------
