--- a/documentation/css/opus-front.css
+++ b/documentation/css/opus-front.css
@@ -1,11 +1,11 @@
 /*--------------------------------------------------
 
-		Opus Front
-		A simple CSS framework for use in Opus Software projects
+    Opus Front
+    A simple CSS framework for use in Opus Software projects
 
-		Version : Alpha 0.1.0
+    Version : Alpha 0.1.0
 
-		http://github.com/andreloureiro/opus-front
+    http://github.com/andreloureiro/opus-front
 
 --------------------------------------------------*/
 
@@ -418,18 +418,42 @@ table {
     border-spacing: 0;
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  src: url("font/OpenSans-Regular-webfont.eot");
+  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
 /*--------------------------------------------------
-   |					      	B A S E 							     |
+   |                  B A S E                    |
    --------------------------------------------------
 
-	Hide every element that has the hidden attribute
+  Hide every element that has the hidden attribute
 */
 [hidden] {
   display: none !important;
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  src: url("font/OpenSans-Regular-webfont.eot");
+  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
 /*--------------------------------------------------
-   |					      	G R I D 							     |
+   |                  G R I D                    |
    --------------------------------------------------
 */
 .grid {
@@ -643,79 +667,93 @@ table {
   width: 95.83333%;
 }
 
-@import "../config/colors";
+@font-face {
+  font-family: 'Open Sans';
+  src: url("font/OpenSans-Regular-webfont.eot");
+  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
 
 /*--------------------------------------------------
-   |					      B U T T O N S 						     |
+   |                B U T T O N S                  |
    --------------------------------------------------
 */
-
 .button {
-	display: inline-block;
-	vertical-align: top;
-	padding: .4em 1em;
-	background: $button-background;
-	border: none;
-	border-top: 0px solid transparent;
-	border-bottom: 2px solid darken($silver, 10%);
-
-	text-decoration: none;
-	color: $black;
-
-	outline: none;
-
-	&:active {
-		border-top: 2px solid transparent;
-		border-bottom: 0px;
-	}
-
-	&.button--disabled {
-		background: $button-disabled-background;
-		color: $button-disabled-color;
-		border: none;
-		cursor: not-allowed; 
-	}
-
-	&.button--active {
-		background: $button-active-background;
-		color: $button-active-color;
-		border: none;
-	}
-
-	&.button--success {
-		background: $button-success-background;
-		color: $button-success-color;
-		border-bottom-color: darken($button-success-background, 10%);
-	}
-
-	&.button--error {
-		background: $button-error-background;
-		color: $button-error-color;
-		border-bottom-color: darken($button-error-background, 10%);
-	}
-
-	&.button--warning {
-		background: $button-warning-background;
-		color: $button-warning-color;
-		border-bottom-color: darken($button-warning-background, 10%);
-	}
-
-	&.button--extra-small {
-		font-size: 60%;
-	}
-
-	&.button--small {
-		font-size: 80%;
-	}
-
-	&.button--large {
-		font-size: 120%;
-	}
-
-	&.button--extra-large {
-		font-size: 140%;
-	}
+  display: inline-block;
+  vertical-align: top;
+  padding: .4em 1em;
+  background: #ecf0f1;
+  border: none;
+  border-top: 0px solid transparent;
+  border-bottom: 2px solid #cfd9db;
+  text-decoration: none;
+  color: #1e1e1e;
+  outline: none;
 }
+.button:active {
+  border-top: 2px solid transparent;
+  border-bottom: 0px;
+}
+.button.button--disabled {
+  background: #e2e2e2;
+  color: #c8c8c8;
+  border: none;
+  cursor: not-allowed;
+}
+.button.button--active {
+  background: #cfd9db;
+  color: #1e1e1e;
+  border: none;
+}
+.button.button--success {
+  background: #2ecc71;
+  color: #fbfbfb;
+  border-bottom-color: #25a25a;
+}
+.button.button--error {
+  background: #e74c3c;
+  color: #fbfbfb;
+  border-bottom-color: #d62c1a;
+}
+.button.button--warning {
+  background: #f1c40f;
+  color: #1e1e1e;
+  border-bottom-color: #c29d0b;
+}
+.button.button--extra-small {
+  font-size: 60%;
+}
+.button.button--small {
+  font-size: 80%;
+}
+.button.button--large {
+  font-size: 120%;
+}
+.button.button--extra-large {
+  font-size: 140%;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url("font/OpenSans-Regular-webfont.eot");
+  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+/*--------------------------------------------------
+   |                  F O R M S                  |
+   --------------------------------------------------
+*/
 .form fieldset {
   display: block;
   margin: 0;
@@ -818,13 +856,59 @@ table {
   background: #eeeeee;
 }
 
+.table {
+  border: 1px solid #95a5a6;
+  border-collapse: collapse;
+  border-spacing: 0;
+  empty-cells: show;
+}
+.table td, .table th {
+  border-left: 1px solid #95a5a6;
+  overflow: visible;
+  padding: .4em .6em;
+}
+.table td:first-child, .table th:first-child {
+  border-left-width: 0;
+}
+.table thead {
+  vertical-align: top;
+  background: #ecf0f1;
+  text-align: left;
+}
+.table.table-bordered tr {
+  border-bottom: 1px solid #95a5a6;
+}
+.table.table-horizontal td, .table.table-horizontal th {
+  border-left-width: 0;
+  border-bottom: 1px solid #95a5a6;
+}
+.table.table-striped tbody tr:nth-child(odd) {
+  background: #f5f7f7;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url("font/OpenSans-Regular-webfont.eot");
+  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+/*--------------------------------------------------
+   |                 M E N U S                   |
+   --------------------------------------------------
+*/
 .menu .heading {
   display: inline-block;
   padding: .6em .8em;
   margin: 0;
   text-transform: uppercase;
   font-size: .8em;
-  color: #777;
+  color: #95a5a6;
 }
 .menu ul {
   display: inline-block;
@@ -845,17 +929,17 @@ table {
   display: block;
   padding: .6em .8em;
   text-decoration: none;
-  color: #555;
+  color: #1e1e1e;
 }
 .menu ul li a:hover {
-  background: #EFEFEF;
+  background: #ecf0f1;
 }
 .menu ul li a.active {
-  color: #111;
+  background: #bdc3c7;
 }
 .menu.menu--bordered {
   display: inline-block;
-  border: 1px solid #555;
+  border: 1px solid #95a5a6;
 }
 
 .menu--vertical .heading {
@@ -864,9 +948,9 @@ table {
   margin: 0;
   text-transform: uppercase;
   font-size: .8em;
-  color: #777;
+  color: #95a5a6;
   text-decoration: none;
-  border-bottom: 1px solid #555;
+  border-bottom: 1px solid #95a5a6;
 }
 .menu--vertical ul {
   margin: 0;
@@ -880,24 +964,41 @@ table {
   display: block;
   padding: .6em .8em;
   text-decoration: none;
-  color: #555;
+  color: #1e1e1e;
 }
 .menu--vertical ul li a:hover {
-  background: #EFEFEF;
+  background: #ecf0f1;
 }
 .menu--vertical ul li a.active {
-  color: #111;
+  background: #bdc3c7;
 }
 .menu--vertical.menu--vertical-bordered {
   display: inline-block;
-  border: 1px solid #555;
+  border: 1px solid #95a5a6;
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  src: url("font/OpenSans-Regular-webfont.eot");
+  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+/*--------------------------------------------------
+   |               M E S S A G E S                 |
+   --------------------------------------------------
+*/
 .message {
   display: block;
   width: 100%;
   margin-bottom: 1em;
-  background: blue;
+  background: #3498db;
+  border: 2px solid #2b94d9;
   text-align: center;
 }
 .message p {
@@ -906,14 +1007,17 @@ table {
   color: white;
 }
 .message.message--success {
-  background: green;
+  background: #2ecc71;
+  border: 2px solid #2cc46c;
 }
 .message.message--error {
-  background: red;
+  background: #e74c3c;
+  border: 2px solid #e64433;
 }
 .message.message--warning {
-  background: yellow;
+  background: #f1c40f;
+  border: 2px solid #e8bd0e;
 }
 .message.message--warning p {
-  color: #333333;
+  color: #1e1e1e;
 }
