--- a/src/base/base.scss
+++ b/src/base/base.scss
@@ -1,3 +1,6 @@
+@import "../config/colors";
+@import "../config/font";
+
 /*--------------------------------------------------
    |					      	B A S E 							     |
    --------------------------------------------------
