--- a/src/buttons/buttons.scss
+++ b/src/buttons/buttons.scss
@@ -1,4 +1,5 @@
 @import "../config/colors";
+@import "../config/font";
 
 /*--------------------------------------------------
    |					      B U T T O N S 						     |
