--- a/src/menus/menus.scss
+++ b/src/menus/menus.scss
@@ -1,3 +1,11 @@
+@import "../config/colors.scss";
+@import "../config/font.scss";
+
+/*--------------------------------------------------
+   |					       M E N U S 							     |
+   --------------------------------------------------
+*/
+
 .menu {
 
 	.heading {
@@ -6,7 +14,7 @@
 		margin: 0;
 		text-transform: uppercase;
 		font-size: .8em;
-		color: #777;
+		color: $menu-heading-color;
 	}
 
 	ul {
@@ -28,12 +36,12 @@
 				display: block;
 				padding: .6em .8em;
 				text-decoration: none;
-				color: #555;
+				color: $menu-link-color;
 				&:hover {
-					background: #EFEFEF;
+					background: $menu-link-hover-background;
 				}
 				&.active {
-					color: #111;
+					background: $menu-link-active-background;
 				}
 			}
 		}
@@ -41,7 +49,7 @@
 
 	&.menu--bordered {
 		display: inline-block;
-		border: 1px solid #555;
+		border: 1px solid $menu-border-color;
 	}
 }
 
@@ -53,9 +61,9 @@
 		margin: 0;
 		text-transform: uppercase;
 		font-size: .8em;
-		color: #777;
+		color: $menu-heading-color;
 		text-decoration: none;
-		border-bottom: 1px solid #555;
+		border-bottom: 1px solid $menu-border-color;
 	}
 
 	ul {
@@ -70,12 +78,12 @@
 				display: block;
 				padding: .6em .8em;
 				text-decoration: none;
-				color: #555;
+				color: $menu-link-color;
 				&:hover {
-					background: #EFEFEF;
+					background: $menu-link-hover-background;
 				}
 				&.active {
-					color: #111;
+					background: $menu-link-active-background;
 				}
 			}
 		}
@@ -83,6 +91,6 @@
 
 	&.menu--vertical-bordered {
 		display: inline-block;
-		border: 1px solid #555;
+		border: 1px solid $menu-border-color;
 	}
 }
