--- a/src/messages/messages.css
+++ b/src/messages/messages.css
@@ -1,8 +1,18 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
+body {
+  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+}
+
+/*--------------------------------------------------
+   |					     M E S S A G E S						     |
+   --------------------------------------------------
+*/
 .message {
   display: block;
   width: 100%;
   margin-bottom: 1em;
-  background: blue;
+  background: #3498db;
+  border: 2px solid #2b94d9;
   text-align: center;
 }
 .message p {
@@ -11,14 +21,17 @@
   color: white;
 }
 .message.message--success {
-  background: green;
+  background: #2ecc71;
+  border: 2px solid #2cc46c;
 }
 .message.message--error {
-  background: red;
+  background: #e74c3c;
+  border: 2px solid #e64433;
 }
 .message.message--warning {
-  background: yellow;
+  background: #f1c40f;
+  border: 2px solid #e8bd0e;
 }
 .message.message--warning p {
-  color: #333333;
+  color: #1e1e1e;
 }
