Added * user-select and user-drag none to prevente image select while drag

--- a/src/base/base.css
+++ b/src/base/base.css
@@ -9,6 +9,12 @@ body {
 
 	Hide every element that has the hidden attribute
 */
+* {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
+}
+
 [hidden] {
   display: none !important;
 }
