--- a/src/base/base.scss
+++ b/src/base/base.scss
@@ -12,6 +12,13 @@
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-webkit-user-drag: none;
+
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 [hidden] {
