--- a/src/base/base.css
+++ b/src/base/base.css
@@ -21,6 +21,13 @@ body {
   user-select: none;
 }
 
+html, body {
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+}
+
 [hidden] {
   display: none !important;
 }
