--- a/src/base/base.scss
+++ b/src/base/base.scss
@@ -21,6 +21,13 @@
 	user-select: none;
 }
 
+html, body {
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+	font-smoothing: antialiased;
+}
+
 [hidden] {
 	display: none !important;
 }
