--- a/documentation/css/opus-front.css
+++ b/documentation/css/opus-front.css
@@ -418,14 +418,7 @@ table {
     border-spacing: 0;
 }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url("font/OpenSans-Regular-webfont.eot");
-  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
@@ -436,18 +429,34 @@ body {
 
   Hide every element that has the hidden attribute
 */
+* {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+html, body {
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  -o-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+}
+
 [hidden] {
   display: none !important;
 }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url("font/OpenSans-Regular-webfont.eot");
-  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
+img {
+  min-width: 100%;
 }
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
@@ -667,14 +676,7 @@ body {
   width: 95.83333%;
 }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url("font/OpenSans-Regular-webfont.eot");
-  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
@@ -738,14 +740,7 @@ body {
   font-size: 140%;
 }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url("font/OpenSans-Regular-webfont.eot");
-  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
@@ -875,25 +870,18 @@ body {
   background: #ecf0f1;
   text-align: left;
 }
-.table.table-bordered tr {
+.table.table--bordered tr {
   border-bottom: 1px solid #95a5a6;
 }
-.table.table-horizontal td, .table.table-horizontal th {
+.table.table--horizontal td, .table.table--horizontal th {
   border-left-width: 0;
   border-bottom: 1px solid #95a5a6;
 }
-.table.table-striped tbody tr:nth-child(odd) {
+.table.table--striped tbody tr:nth-child(odd) {
   background: #f5f7f7;
 }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url("font/OpenSans-Regular-webfont.eot");
-  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
@@ -977,14 +965,7 @@ body {
   border: 1px solid #95a5a6;
 }
 
-@font-face {
-  font-family: 'Open Sans';
-  src: url("font/OpenSans-Regular-webfont.eot");
-  src: url("font/OpenSans-Regular-webfont.eot?#iefix") format("embedded-opentype"), url("font/OpenSans-Regular-webfont.woff") format("woff"), url("font/OpenSans-Regular-webfont.ttf") format("truetype"), url("font/OpenSans-Regular-webfont.svg#open_sansregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
