--- a/documentation/_includes/header.html
+++ b/documentation/_includes/header.html
@@ -1,6 +1,14 @@
 <div class="grid">
-	<div class="grid-unit-1 title-area">
-		<h1>Opus Front</h1>
-		<p>Framework CSS para os desenvolvedores da Opus</p>
+	<div class="grid-unit-1-5"></div>
+	<div class="grid-unit-3-5">
+		<div class="grid">
+			<div class="grid-unit-1-4">
+				<img src="/images/logo-opus-front.png" alt="">
+			</div>
+			<div class="grid-unit-3-4">
+				<h1>Opus Front</h1>
+				<p>Framework CSS para os desenvolvedores da Opus</p>
+			</div>
+		</div>
 	</div>
 </div>
