--- a/documentation/_includes/header.html
+++ b/documentation/_includes/header.html
@@ -1,14 +1,14 @@
-<div class="grid">
-	<div class="grid-unit-1-5"></div>
-	<div class="grid-unit-3-5">
+<header class="grid">
+	<div class="grid-unit-1-4"></div>
+	<div class="grid-unit-2-4">
 		<div class="grid">
 			<div class="grid-unit-1-4">
-				<img src="/images/logo-opus-front.png" alt="">
+				<img src="/images/logo-opus-front.png" alt="Opus Front logo" width="130">
 			</div>
 			<div class="grid-unit-3-4">
 				<h1>Opus Front</h1>
-				<p>Framework CSS para os desenvolvedores da Opus</p>
+				<p class="title-desc">Framework CSS para os desenvolvedores da Opus</p>
 			</div>
 		</div>
 	</div>
-</div>
+</header>
