--- a/documentation/_layouts/default.html
+++ b/documentation/_layouts/default.html
@@ -23,7 +23,7 @@
           <nav class="menu--vertical menu--vertical-bordered menu-content">
             <ul>
               <li>
-                <a href="#" class="heading">Seções</a>
+                <p href="#" class="heading">Seções</p>
               </li>
               {% for item in site.data.menu %}
               <li>
