Fixed header top border

--- a/documentation/css/style.css
+++ b/documentation/css/style.css
@@ -1,6 +1,6 @@
 header {
   background: rgba(40, 40, 40, 1);
-  border-middle: 4px solid rgba(231, 76, 60, 1);
+  border-top: 4px solid rgba(231, 76, 60, 1);
 }
 
 body {}
