Fixed padding for code

--- a/documentation/css/style.css
+++ b/documentation/css/style.css
@@ -26,7 +26,7 @@ pre {
 }
 
 p code {
-  padding: .2em .6em;
+  padding: 0em .6em;
   background: #F0F0F0;
   font-size: .8em;
   border: 1px solid gainsboro;
