--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -8,7 +8,6 @@ body {
    --------------------------------------------------
 */
 .grid {
-  *display: block;
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
   display: -ms-flexbox;
@@ -17,7 +16,6 @@ body {
 }
 .grid [class*="grid-unit"] {
   display: inline-block;
-  *display: inline;
   vertical-align: top;
   box-sizing: border-box;
   padding-left: 0.625em;
@@ -25,6 +23,10 @@ body {
   word-spacing: normal;
   text-rendering: auto;
   zoom: 1;
+  margin-left: -0.3125em \0;
+}
+.grid [class*="grid-unit"]:first-child {
+  padding-left: 0.9375em \0;
 }
 .grid [class*="grid-unit"]:last-child {
   padding-right: 0.625em;
