--- a/documentation/css/style.css
+++ b/documentation/css/style.css
@@ -131,3 +131,323 @@ p code {
 .grid-ex .sidebar {
   background: blue;
 }
+
+/* Fonts */
+
+.lato {
+  font-family: "Lato", sans-serif;
+}
+
+.lato p {
+  margin-bottom: 0;
+}
+
+.lato .thin {
+  font-size: 2em;
+  font-weight: 100;
+}
+
+.lato .light {
+  font-size: 2em;
+  font-weight: 300;
+}
+
+.lato .normal {
+  font-size: 2em;
+  font-weight: 400;
+}
+
+.lato .bold {
+  font-size: 2em;
+  font-weight: 700;
+}
+
+.lato .ultrabold {
+  font-size: 2em;
+  font-weight: 900;
+}
+
+.lato .thin-italic {
+  font-size: 2em;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.lato .light-italic {
+  font-size: 2em;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.lato .normal-italic {
+  font-size: 2em;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.lato .bold-italic {
+  font-size: 2em;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.lato .ultrabold-italic {
+  font-size: 2em;
+  font-weight: 900;
+  font-style: italic;
+}
+
+.coustard {
+  font-family: "Coustard", serif;
+}
+
+.coustard p {
+  font-size: 2em;
+  margin-bottom: 0;
+}
+
+.coustard .normal {
+  font-weight: 400;
+}
+
+.coustard .ultrabold {
+  font-weight: 900;
+}
+
+.eb-garamound p {
+  font-family: 'EB Garamound', serif;
+  font-size: 2em;
+}
+
+.eb-garamound .normal {
+  font-weight: 400;
+}
+
+.droid-serif p {
+  margin-bottom: 0;
+  font-family: 'Droid Serif', serif;
+  font-size: 2em;
+}
+
+.droid-serif .normal {
+  font-weight: 400;
+}
+
+.droid-serif .bold {
+  font-weight: 700;
+}
+
+.droid-serif .normal-italic {
+  font-weight: 400;
+  font-style: italic;
+}
+
+.droid-serif .bold-italic {
+  font-weight: 700;
+  font-style: italic;
+}
+
+.roboto p {
+  margin-bottom: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 2em;
+}
+
+.roboto .thin {
+  font-weight: 100;
+}
+
+.roboto .light {
+  font-weight: 300;
+}
+
+.roboto .normal {
+  font-weight: 400;
+}
+
+.roboto .medium {
+  font-weight: 500;
+}
+
+.roboto .bold {
+  font-weight: 700;
+}
+
+.roboto .ultrabold {
+  font-weight: 900;
+}
+
+.roboto .thin-italic {
+  font-weight: 100;
+  font-style: italic;
+}
+
+.roboto .light-italic {
+  font-weight: 300;
+  font-style: italic;
+}
+
+.roboto .normal-italic {
+  font-weight: 400;
+  font-style: italic;
+}
+
+.roboto .medium-italic {
+  font-weight: 500;
+  font-style: italic;
+}
+
+.roboto .bold-italic {
+  font-weight: 700;
+  font-style: italic;
+}
+
+.roboto .ultrabold-italic {
+  font-weight: 900;
+  font-style: italic;
+}
+
+.roboto-condensed p {
+  margin-bottom: 0;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 2em;
+}
+
+.roboto-condensed .light {
+  font-weight: 300;
+}
+
+.roboto-condensed .normal {
+  font-weight: 400;
+}
+
+.roboto-condensed .bold {
+  font-weight: 700;
+}
+
+.roboto-condensed .light-italic {
+  font-weight: 300;
+  font-style: italic;
+}
+
+.roboto-condensed .normal-italic {
+  font-weight: 400;
+  font-style: italic;
+}
+
+.roboto-condensed .bold-italic {
+  font-weight: 700;
+  font-style: italic;
+}
+
+.dancing-script p {
+  margin-bottom: 0;
+  font-family: 'Dancing Script', cursive;
+  font-size: 2em;
+}
+
+.dancing-script .normal {
+  font-weight: 400;
+}
+
+.dancing-script .bold {
+  font-weight: 700;
+}
+
+.oswald p {
+  margin-bottom: 0;
+  font-family: 'Oswald', sans-serif;
+  font-size: 2em;
+}
+
+.oswald .light {
+  font-weight: 300;
+}
+
+.oswald .normal {
+  font-weight: 400;
+}
+
+.oswald .bold {
+  font-weight: 700;
+}
+
+.alice p {
+  margin-bottom: 0;
+  font-family: 'Alice', serif;
+  font-size: 2em;
+}
+
+.alice .normal {
+  font-weight: 400;
+}
+
+.open-sans p {
+  margin-bottom: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2em;
+}
+
+.open-sans .light {
+  font-weight: 300;
+}
+
+.open-sans .normal {
+  font-weight: 400;
+}
+
+.open-sans .semibold {
+  font-weight: 600;
+}
+
+.open-sans .bold {
+  font-weight: 700;
+}
+
+.open-sans .extrabold {
+  font-weight: 800;
+}
+
+.open-sans .light-italic {
+  font-weight: 300;
+  font-style: italic;
+}
+
+.open-sans .normal-italic {
+  font-weight: 400;
+  font-style: italic;
+}
+
+.open-sans .semibold-italic {
+  font-weight: 600;
+  font-style: italic;
+}
+
+.open-sans .bold-italic {
+  font-weight: 700;
+  font-style: italic;
+}
+
+.open-sans .extrabold-italic {
+  font-weight: 800;
+  font-style: italic;
+}
+
+.open-sans-condensed p {
+  margin-bottom: 0;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 2em;
+}
+
+.open-sans-condensed .light {
+  font-weight: 300;
+}
+
+.open-sans-condensed .bold {
+  font-weight: 700;
+}
+
+.open-sans-condensed .light-italic {
+  font-weight: 300;
+  font-style: italic;
+}
