--- a/src/intro.css
+++ b/src/intro.css
@@ -1,12 +1,12 @@
-/*--------------------------------------------------
+/* ===========================================================================
 
-		Opus Front
-		A simple CSS framework for use in Opus Software projects
+   |{}| Opus Front
+        Simple and modularized CSS framework
+   
+   Version : 0.1.0 Alpha
 
-		Version : Alpha 0.1.0
+   http://github.com/andreloureiro/opus-front
 
-		http://github.com/andreloureiro/opus-front
-
---------------------------------------------------*/
+   =========================================================================== */
 
 
