--- a/src/grid/grid.scss
+++ b/src/grid/grid.scss
@@ -1,5 +1,4 @@
 @import "../config/colors.scss";
-@import "../config/font.scss";
 
 /*--------------------------------------------------
    |					      	G R I D 							     |
@@ -7,11 +6,10 @@
 */
 
 .grid {
-	display: -webkit-flex;
-	-webkit-flex-flow: row wrap;
-	display: -ms-flexbox;
-	-ms-flex-flow: row wrap;
-	display: flex;
+	display: inline-block;
+	*display: inline;
+	*zoom: 1;
+	width: 100%;
 
 	[class *= "grid-unit"] {
 		display: inline-block;
