--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -22,7 +22,7 @@
 }
 .grid [class*="grid-unit"]:first-child {
   padding-left: 0;
-  margin-left: -4px;
+  margin-left: -0.25em;
 }
 .grid .grid-unit-1 {
   width: 100%;
