--- a/src/base/base.scss
+++ b/src/base/base.scss
@@ -1,11 +1,12 @@
 @import "../config/colors";
 
-/*--------------------------------------------------
-   |					      	B A S E 							     |
-   --------------------------------------------------
+/* ===========================================================================
 
-	Hide every element that has the hidden attribute
-*/
+   |{}| Base
+   
+   =========================================================================== */
+
+	// Hide every element that has the hidden attribute
 
 html, body {
 	-webkit-font-smoothing: antialiased;
