--- a/src/buttons/buttons.css
+++ b/src/buttons/buttons.css
@@ -1,7 +1,8 @@
-/*--------------------------------------------------
-   |					      B U T T O N S 						     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Buttons
+   
+   =========================================================================== */
 .button {
   display: inline-block;
   vertical-align: top;
