--- a/src/buttons/buttons.scss
+++ b/src/buttons/buttons.scss
@@ -1,9 +1,11 @@
 @import "../config/colors";
 
-/*--------------------------------------------------
-   |					      B U T T O N S 						     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Buttons
+   
+   =========================================================================== */
+
 
 .button {
 	display: inline-block;
