--- a/src/forms/forms.css
+++ b/src/forms/forms.css
@@ -1,7 +1,8 @@
-/*--------------------------------------------------
-   |					        F O R M S  						     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Forms
+   
+   =========================================================================== */
 .form fieldset {
   display: block;
   margin: 0;
