--- a/src/forms/forms.scss
+++ b/src/forms/forms.scss
@@ -1,9 +1,10 @@
 @import "../config/colors.scss";
 
-/*--------------------------------------------------
-   |					        F O R M S  						     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Forms
+   
+   =========================================================================== */
 
 .form {
 	fieldset {
