--- a/src/grid/grid.css
+++ b/src/grid/grid.css
@@ -1,7 +1,8 @@
-/*--------------------------------------------------
-   |					      	G R I D 							     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Grid
+   
+   =========================================================================== */
 .grid {
   display: inline-block;
   *display: inline;
