--- a/src/grid/grid.scss
+++ b/src/grid/grid.scss
@@ -1,9 +1,10 @@
 @import "../config/colors.scss";
 
-/*--------------------------------------------------
-   |					      	G R I D 							     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Grid
+   
+   =========================================================================== */
 
 .grid {
 	display: inline-block;
