--- a/src/menus/menus.css
+++ b/src/menus/menus.css
@@ -1,7 +1,8 @@
-/*--------------------------------------------------
-   |					       M E N U S 							     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Menus
+   
+   =========================================================================== */
 .menu .heading {
   display: inline-block;
   padding: .6em .8em;
