--- a/src/menus/menus.scss
+++ b/src/menus/menus.scss
@@ -1,9 +1,10 @@
 @import "../config/colors.scss";
 
-/*--------------------------------------------------
-   |					       M E N U S 							     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Menus
+   
+   =========================================================================== */
 
 .menu {
 
