--- a/src/messages/messages.css
+++ b/src/messages/messages.css
@@ -1,7 +1,8 @@
-/*--------------------------------------------------
-   |					     M E S S A G E S						     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Messages
+   
+   =========================================================================== */
 .message {
   display: block;
   width: 100%;
