--- a/src/tables/tables.scss
+++ b/src/tables/tables.scss
@@ -1,5 +1,12 @@
 @import "../config/colors.scss";
 
+/* ===========================================================================
+
+   |{}| Tables
+   
+   =========================================================================== */
+
+
 .table {
 	border: 1px solid $table-border-color;
 	border-collapse: collapse;
