--- a/src/base/base.css
+++ b/src/base/base.css
@@ -1,9 +1,8 @@
-/*--------------------------------------------------
-   |					      	B A S E 							     |
-   --------------------------------------------------
+/* ===========================================================================
 
-	Hide every element that has the hidden attribute
-*/
+   |{}| Base
+   
+   =========================================================================== */
 html, body {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
