--- a/src/messages/messages.scss
+++ b/src/messages/messages.scss
@@ -1,9 +1,10 @@
 @import "../config/colors.scss";
 
-/*--------------------------------------------------
-   |					     M E S S A G E S						     |
-   --------------------------------------------------
-*/
+/* ===========================================================================
+
+   |{}| Messages
+   
+   =========================================================================== */
 
 .message {
 	display: block;
