--- a/src/tables/tables.css
+++ b/src/tables/tables.css
@@ -1,3 +1,8 @@
+/* ===========================================================================
+
+   |{}| Tables
+   
+   =========================================================================== */
 .table {
   border: 1px solid #95a5a6;
   border-collapse: collapse;
