--- a/documentation/_includes/header.html
+++ b/documentation/_includes/header.html
@@ -1,11 +1,10 @@
 <header class="grid">
-	<div class="grid-unit-1-4"></div>
-	<div class="grid-unit-2-4">
+	<div class="container">
 		<div class="grid">
-			<div class="grid-unit-1-4">
+			<div class="grid-unit-1-8">
 				<img src="/images/logo-opus-front.png" alt="Opus Front logo" width="130">
 			</div>
-			<div class="grid-unit-3-4">
+			<div class="grid-unit-7-8">
 				<h1>Opus Front</h1>
 				<p class="title-desc">Framework CSS para os desenvolvedores da Opus</p>
 			</div>
