--- a/documentation/css/style.css
+++ b/documentation/css/style.css
@@ -3,11 +3,18 @@ header {
   border-top: 4px solid rgba(231, 76, 60, 1);
 }
 
-body {}
+body {
+  font-family: 'Lato', Helvetica, Arial, sans-serif;
+}
 
 h1, h2, h3, h4, h5, h6 {
   color: rgba(231, 76, 60, 1);
   font-weight: 100;
+}
+
+h1 {
+  margin: 0.3em 0 0;
+  font-size: 3em;
 }
 
 strong {
