--- a/documentation/css/style.css
+++ b/documentation/css/style.css
@@ -475,3 +475,24 @@ p code {
   font-weight: 300;
   font-style: italic;
 }
+
+.download-all {
+  display: block;
+  width: 70%;
+  margin: 50px auto 0;
+  padding: 40px;
+  background: rgba(231, 76, 60, 1);
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  font-size: 26px;
+  font-weight: bold;
+  text-shadow: 0 -1px 0 rgba(131, 16, 10, 1);
+  border-top: 0px solid transparent;
+  border-bottom: 5px solid rgba(181, 36, 30, 1);
+}
+
+.download-all:active {
+  border-top: 5px solid transparent;
+  border-bottom: 0px solid rgba(131, 16, 10, 1);  
+}
